# voting-dapp-workshop

./: README.md  _sidebar.md  index.html
solution/: .gitignore  .rustfmt.toml  Cargo.toml
solution/contracts/staking/: Cargo.toml  lib.rs
solution/contracts/voting/: Cargo.toml  lib.rs
solution/src/: Cargo.toml  lib.rs
solution/src/impls/: mod.rs  staking.rs  voting.rs
solution/src/libs/: errors.rs
solution/src/traits/: mod.rs  staking.rs  voting.rs
voting-dapp/: architecture.md  impl-staking.md  setup.md  start.md  user-journey.md
voting-dapp/p1/: add-staking.md  create-psp22.md  customize-psp22.md  dependencies.md  deploy.md  impl-staking.md  setup.md  user-journey.md
voting-dapp/p2/: add-impl.md  add-trait-and-impl.md  add-trait.md  create-voting-contract.md  dependencies.md  deploy.md  voting-logic.md
